[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde_json = "1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
htmlescape = "0.3"
urlencoding = "2"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.21"
anyhow = "1"
thiserror = "1"
validator = "0.16"
claims = "0.7"
unicode-segmentation = "1"
serde-aux = "4"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
config = "0.13"
actix-web = "4"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
rand = { version = "0.8", features=["std_rng"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "offline",
    "migrate"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
# `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
linkify = "0.9"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"